--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,21 @@ dependencies:
   file_picker: ^4.6.1
   http: ^0.13.4
   intl: ^0.17.0
-  workmanager:
+  firebase_core: ^1.20.0
+  firebase_messaging: ^12.0.1
+  cloud_firestore: ^3.1.10
+  flutter_launcher_icons: ^0.9.3
+
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/elnageelogo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
