--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,8 +65,11 @@ flutter {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:multidex:2.0.1"
-    implementation platform('com.google.firebase:firebase-bom:30.3.1')
+
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+
 }
