--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.12.0
   firebase_messaging: ^11.2.7
+  image_picker: ^0.8.6+4
 
   flutter_launcher_icons: ^0.9.3
 
