--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,9 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.12.0
   firebase_messaging: ^11.2.7
-  image_picker: ^0.8.6+4
+  image_picker:
+  file: ^6.1.4
+  change_app_package_name: ^1.1.0
 
   flutter_launcher_icons: ^0.9.3
 
